5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1643_2711.log
== TEST (2019-04-10 04:03:28) 
-- CODE:
var = float(input("var disponivel: "))
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:05:22) 
-- CODE:
var = float(input("var disponivel: "))
tickets = float(input("quantidade: "))
vart = float(input("var tickets: "))
passes = float(input("passes: "))
varp = float(input("var passes: "))
-- OUTPUT:
Falta -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:07:27) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))

if(soma >= 468.70):
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:07:45) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))

if(soma >= 470):
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:08:40) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
if(soma >= 470):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:09:17) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
if(soma >= 468.70):
	print(SUFICICENTE)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(soma >= 468.70):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:10:09) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
if(var >= 400):
	print(SUFICICENTE)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(SUFICICENTE)
NameError: name 'SUFICICENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:10:48) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
if(var >= 400):
	print("SUFICICENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:11:34) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
if(var >= 400):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 04:11:55) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
if(var >= 400):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.185446
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICICENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:14:23) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma >= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:14:56) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma >= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:15:26) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma >= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 04:15:31) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma >= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.120899
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICICENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:15:50) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma <= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 04:16:11) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma <= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.189655
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICICENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:16:13) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma <= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:16:52) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(soma <= var):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 04:17:24) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(var >= soma):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 04:17:41) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(var >= soma):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- EXECUTION TIME:
0.154883
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICICENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:27:10) 
-- CODE:
var = float(input("var disponivel: "))
tickets = int(input("quantidade: "))
vart = float(input("var tickets: "))
passes = int(input("passes: "))
varp = float(input("var passes: "))
soma = tickets * vart + passes * varp
if(var >= soma):
	print("SUFICICENTE")
else:
	print("INSUFICIENTE")
	
-- OUTPUT:
SUFICICENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
